<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="settings_screen">Settings</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_meeting_request_notification">MeetingRequestNotificationActivity
    </string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="matches_screen">Matches Screen</string>
    <string name="profile_screen">Profile Screen</string>
    <string name="facebook_app_id">1837133439841478</string>
    <string name="fb_login_protocol_scheme">fb1837133439841478</string>
    <string name="title_activity_prophile">ProphileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="arrow">></string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>

</resources>
