<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        />
    <item
        android:id="@+id/fresh_config_menu"
        android:title="@string/fresh_config"
        />
    <item
        android:id="@+id/matches_screen_menu"
        android:title="@string/matches_screen"
        />
    <item
        android:id="@+id/profile_page_menu"
        android:title="@string/profile_screen"
        />
    <item
        android:id="@+id/invite_menu"
        android:title="@string/invite_menu_label"
        />
    <item
        android:id="@+id/crash_menu"
        android:title="@string/cause_crash"/>
</menu>